--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -9,7 +11,7 @@ html {
 body {
   background: whitesmoke;
   display: grid;
-  font-family: cursive;
+  font-family: Muli;
   margin: 0;
   min-height: 100vh;
   padding: 1rem;
@@ -28,6 +30,10 @@ ol {
 }
 
 @media screen and (min-width: 450px) {
+  html {
+    font-size: 50%;
+  }
+
   body {
     place-items: center;
   }
